@@ -39,7 +39,7 @@ describe      = Web Browser
 website       = http://www.getfirefox.com
 scrape        = http://releases.mozilla.org/pub/mozilla.org/firefox/releases/
 version       = ([0-9]\.[0-9]+[.0-9]*)/
-download      = ftp://ftp.mozilla.org/pub/mozilla.org/firefox/releases/#VERSION#/win32/en-US/
+download      = http://releases.mozilla.org/pub/mozilla.org/firefox/releases/#VERSION#/win32/en-US/
 filename      = Firefox Setup #VERSION#.exe
 instparam     = -ms
 upgrades      = true
@@ -185,7 +185,7 @@ describe      = Mail Client
 website       = http://www.getthunderbird.com
 scrape        = http://releases.mozilla.org/pub/mozilla.org/thunderbird/releases/
 version       = ([0-9]\.[0-9]+[.0-9]*)/
-download      = ftp://ftp.mozilla.org/pub/mozilla.org/thunderbird/releases/#VERSION#/win32/en-US/
+download      = http://releases.mozilla.org/pub/mozilla.org/thunderbird/releases/#VERSION#/win32/en-US/
 filename      = Thunderbird Setup #VERSION#.exe
 instparam     = -ms
 upgrades      = true
@@ -228,16 +228,15 @@ uninstparam   = /S _?=#INSTALL_DIR#
 category      = Internet
 describe      = SFTP Client
 website       = http://winscp.net/
-scrape        = http://winscp.net/eng/download.php
-version       = WinSCP ([0-9]\.[0-9]\.[0-9])
+scrape        = http://sourceforge.net/projects/winscp/download/
+version       = >([0-9]\.[0-9]\.[0-9])<
 download      = http://downloads.sourceforge.net/winscp/
 filename      = winscp#DOTLESS_VERSION#setup.exe
-referer       = http://downloads.sourceforge.net/winscp/
-instparam     = /S
-upgrades      = false
-chinstdir     = /D=#INSTALL_DIR#
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = winscp#MAJOR_VERSION#_is1
-uninstparam   = /S _?=#INSTALL_DIR#
+uninstparam   = /sp- /silent /norestart
 
 [Xming]
 
@@ -728,6 +727,21 @@ chinstdir     =
 uninstall     = {6855CCDD-BDF9-48E4-B80A-80DFB96FE36C}
 uninstparam   = /qb
 
+[ImageMagick]
+
+category      = Utilities
+describe      = Command Line Image Manipulation
+website       = http://www.imagemagick.org/
+scrape        = http://www.imagemagick.org/download/binaries/
+version       = ImageMagick-([0-9]\.[0-9]\.[0-9]-[0-9])-Q16-windows-dll.exe
+download      = http://www.imagemagick.org/download/binaries/
+filename      = ImageMagick-#VERSION#-Q16-windows-dll.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = ImageMagick #MAJORMINORSUB_VERSION# Q16_is1
+uninstparam   = /sp- /silent /norestart
+
 [KeePass]
 
 category      = Utilities
@@ -741,6 +755,21 @@ instparam     = /sp- /silent /norestart
 upgrades      = true
 chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = KeePass Password Safe_is1
+uninstparam   = /sp- /silent /norestart
+
+[Launchy]
+
+category      = Utilities
+describe      = Application Launcher
+website       = http://www.launchy.net/
+scrape        = http://sourceforge.net/projects/launchy/download/
+version       = LaunchySetup([0-9]+).exe
+download      = http://downloads.sourceforge.net/launchy/
+filename      = LaunchySetup#VERSION#.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Launchy_21344213_is1
 uninstparam   = /sp- /silent /norestart
 
 [SevenZip]
