@@ -3,7 +3,7 @@ Version 1.3
 New Applications
 - Internet : Google Talk, Maxthon, Opera, Skype
 - Fun and Games : Battle for Wesnoth, Tremulous
-- Utilities : Synergy
+- Utilities : ImageMagick, Launchy, Synergy
 - Productivity : DVD-Flick, ImgBurn
 - Libraries : K-Lite Mega Codec Pack
 - Development : wxPython Documentation
@@ -24,6 +24,7 @@ Bug Fixes
   redownloaded (if more than a day since the last download) since we have no way
   to know if the file has changed.
 - Fixed Adobe Reader scraping and download link.
+- Fixed Firefox, Thunderbird and WinSCP download links.
 - Obsolete sections in installed.ini are now filtered out.
 
 Version 1.2.1
